# two-towers

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
config/: tower_a.yaml  tower_b.yaml  turret_config.json
launch/: tower.launch.py  two_towers.launch.py
msg/: Detection.msg  DetectionArray.msg  TowerStatus.msg  TurretState.msg
src/cpp/: ServoController.cpp  ServoController.hpp  Turret.cpp  Turret.hpp  bt_nodes.hpp  main.cpp  orthanc_tracker_node.cpp  orthanc_tracker_node_bt.cpp
src/cpp/sim/: pigpiod_if2.h
src/python/: two_towers_detector_node.py
tests/python/: test_camera_headless.py  test_yolo_headless.py
